k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-trainings
  # https://www.okteto.com/docs/cloud/ssl
  annotations:
    dev.okteto.com/generate-host: svc-trainings
spec:
  rules:
    - host: "*"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
